@@ -6,9 +6,24 @@ import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.*;
 
+/**
+ * Stable TCP lobby‑ és matchmaking‑szerver Imperium Galactica II‑höz.
+ *
+ * ──────────────────────────────────────────────────────────────
+ * Áttekintés
+ *  • Azonnali ack:ok a kliensnek (dead‑lock megszüntetése).
+ *  • 10 ms‑cel késleltetett broadcast, hogy ne áraszszuk el a klienst.
+ *  • Per‑cél rate‑limit 50 ms (max. 20 pkt/s per peer).
+ *  • Üres vagy hibás lobby‑név sosem kerül a listába.
+ *  • Stabil connect / disconnect / reconnect kezelése.
+ *
+ *  (A korábbi 50 ms‑es tick‑szinkron ciklust eltávolítottuk, mert lobby‑fagyást okozott.)
+ * ──────────────────────────────────────────────────────────────
+ */
 public class TcpServer {
     private static final int PORT = 1611;
     private static final int RATE_LIMIT_MS = 50;
+
     private final Map<Integer, ClientHandler> clients = new ConcurrentHashMap<>();
     private final Map<Integer, Map<String, String>> clientParams = new ConcurrentHashMap<>();
     private final Map<Integer, Set<Integer>> lobbyConnections = new ConcurrentHashMap<>();
@@ -18,23 +33,10 @@ public class TcpServer {
         new TcpServer().start();
     }
 
+    //─────────────────────────────────────────────────  SERVER LOOP
     public void start() throws IOException {
         ServerSocket serverSocket = new ServerSocket(PORT);
         System.out.println("TCP server listening on port " + PORT);
-
-        ScheduledExecutorService tickScheduler = Executors.newSingleThreadScheduledExecutor();
-        tickScheduler.scheduleAtFixedRate(() -> {
-            for (ClientHandler sender : clients.values()) {
-                for (Integer targetId : lobbyConnections.getOrDefault(sender.clientId, Collections.emptySet())) {
-                    if (targetId.equals(sender.clientId)) continue;
-                    ClientHandler target = clients.get(targetId);
-                    if (target != null) {
-                        String msg = "fc:" + sender.clientId + ",fp:0,tp:0|.";
-                        target.sendString(msg);
-                    }
-                }
-            }
-        }, 0, 50, TimeUnit.MILLISECONDS);
 
         while (true) {
             Socket socket = serverSocket.accept();
@@ -44,207 +46,188 @@ public class TcpServer {
             clients.put(clientId, handler);
             lobbyConnections.put(clientId, ConcurrentHashMap.newKeySet());
             new Thread(handler).start();
-            System.out.println("New connection from " + socket.getRemoteSocketAddress() + " (id: " + clientId + ")");
+            System.out.println("New connection from " + socket.getRemoteSocketAddress() + " (id:" + clientId + ")");
         }
     }
 
+    //───────────────────────────────────────────────  CLIENT HANDLER
     private class ClientHandler implements Runnable {
         private final Socket socket;
         private final int clientId;
-        private final DataInputStream input;
-        private final DataOutputStream output;
-        private final Map<Integer, Long> lastSentToClient = new ConcurrentHashMap<>();
+        private final DataInputStream in;
+        private final DataOutputStream out;
+        private final Map<Integer, Long> lastSent = new ConcurrentHashMap<>();
         private final Object writeLock = new Object();
         private volatile boolean running = true;
+        private final ScheduledExecutorService delayedSender = Executors.newSingleThreadScheduledExecutor();
 
-        ClientHandler(Socket socket, int clientId) throws IOException {
-            this.socket = socket;
-            this.clientId = clientId;
-            this.input = new DataInputStream(new BufferedInputStream(socket.getInputStream()));
-            this.output = new DataOutputStream(new BufferedOutputStream(socket.getOutputStream()));
+        ClientHandler(Socket s, int id) throws IOException {
+            socket = s; clientId = id;
+            in = new DataInputStream(new BufferedInputStream(socket.getInputStream()));
+            out = new DataOutputStream(new BufferedOutputStream(socket.getOutputStream()));
             sendClientId();
         }
 
         private void sendClientId() throws IOException {
             synchronized (writeLock) {
-                output.writeInt(Integer.reverseBytes(clientId));
-                output.flush();
+                out.writeInt(Integer.reverseBytes(clientId));
+                out.flush();
             }
         }
 
-        @Override
-        public void run() {
+        @Override public void run() {
             try {
                 while (running) {
-                    int size = Integer.reverseBytes(input.readInt());
-                    byte[] data = new byte[size];
-                    input.readFully(data);
-                    String message = new String(data, StandardCharsets.UTF_8);
-                    handleMessage(message);
+                    int size = Integer.reverseBytes(in.readInt());
+                    byte[] buf = new byte[size];
+                    in.readFully(buf);
+                    process(new String(buf, StandardCharsets.UTF_8));
                 }
             } catch (IOException e) {
-                System.out.println("Connection error (id: " + clientId + "): " + e.getMessage());
-            } finally {
-                shutdown();
-            }
+                System.out.println("Connection error (id:" + clientId + "): " + e.getMessage());
+            } finally { shutdown(); }
         }
 
-        private void handleMessage(String message) {
-            if (message.startsWith("pong:")) return;
+        //─────────────────────────────────────────  MESSAGE DISPATCH
+        private void process(String msg) {
+            if (msg.startsWith("pong:")) return; // ping‑pong kezelése máshol nem kell
 
-            Map<String, String> params = parseMessage(message);
-            String cmd = params.get("cmd");
+            Map<String,String> p = parse(msg);
+            String cmd = p.get("cmd");
+            if (cmd == null) return;
 
             switch (cmd) {
-                case "send" -> handleSend(params, message);
-                case "query" -> handleQuery(params.getOrDefault("str", ""));
-                case "info" -> {
-                    Map<String, String> decoded = decodeBase64Name(params);
-                    if (decoded.getOrDefault("nam", "").isBlank()) return;
-                    clientParams.put(clientId, decoded);
-                }
-                case "connect" -> handleConnect(params);
-                case "disconnect" -> handleDisconnect(params);
+                case "send"      -> handleSend(p, msg);
+                case "query"     -> handleQuery(p.getOrDefault("str", ""));
+                case "info"      -> handleInfo(p);
+                case "connect"   -> handleConnect(p);
+                case "disconnect"-> handleDisconnect(p);
             }
         }
 
+        //────────────────────────────────────  cmd:info  (lobby meta)
+        private void handleInfo(Map<String,String> p) {
+            Map<String,String> decoded = decodeName(p);
+            if (decoded.getOrDefault("nam", "").isBlank()) return; // üres név → ignoráljuk
+            clientParams.put(clientId, decoded);
+        }
 
+        //────────────────────────────────────────────  cmd:query
+        private void handleQuery(String search) {
+            String s = search.toLowerCase();
+            List<String> res = new ArrayList<>();
+            for (var e : clientParams.entrySet()) {
+                String name = e.getValue().getOrDefault("nam", "");
+                int pos = name.toLowerCase().indexOf(s);
+                if (pos >= 0) {
+                    Map<String,String> copy = new HashMap<>(e.getValue());
+                    copy.put("id", String.valueOf(e.getKey()));
+                    copy.put("sti", String.valueOf(pos));
+                    copy.put("nam", Base64.getEncoder().encodeToString(name.getBytes(StandardCharsets.UTF_8)));
+                    res.add(flat(copy));
+                    if (res.size() >= 100) break;
+                }
+            }
+            send("gamelist:" + String.join("|", res));
+        }
 
-        private void handleSend(Map<String, String> params, String originalMsg) {
-            String fp = params.get("fp");
-            String tp = params.get("tp");
-            String data = originalMsg.contains("|") ? originalMsg.substring(originalMsg.indexOf('|') + 1) : "";
-            String msg = "fc:" + clientId + ",fp:" + fp + ",tp:" + tp + "|" + data;
-            String tcStr = params.get("tc");
-            sendString("ack:ok");
+        //────────────────────────────────────────────  cmd:connect
+        private void handleConnect(Map<String,String> p) {
+            int targetId = Integer.parseInt(p.getOrDefault("tc", "0"));
+            if (targetId == 0 || targetId == clientId) { send("ack:error"); return; }
+            ClientHandler target = clients.get(targetId);
+            if (target == null) { send("ack:error"); return; }
+            lobbyConnections.get(clientId).add(targetId);
+            lobbyConnections.get(targetId).add(clientId);
+            target.send("fc:"+clientId+",fp:"+p.get("fp")+",tp:"+p.get("tp")+"|!connect!");
+            send("ack:ok");
+        }
 
-            Runnable broadcast = () -> {
+        //───────────────────────────────────────────  cmd:disconnect
+        private void handleDisconnect(Map<String,String> p) {
+            int peer = Integer.parseInt(p.getOrDefault("fc","0"));
+            lobbyConnections.getOrDefault(clientId, Set.of()).remove(peer);
+            lobbyConnections.getOrDefault(peer, Set.of()).remove(clientId);
+            ClientHandler ch = clients.get(peer);
+            if (ch != null) ch.send("disconnected:"+clientId);
+            send("ack:ok");
+        }
+
+        //──────────────────────────────────────────────  cmd:send
+        private void handleSend(Map<String,String> p, String original) {
+            String fp = p.get("fp"), tp = p.get("tp");
+            String data = original.contains("|") ? original.substring(original.indexOf('|')+1) : "";
+            String packet = "fc:"+clientId+",fp:"+fp+",tp:"+tp+"|"+data;
+            String tc = p.get("tc");
+            send("ack:ok"); // azonnali ack
+
+            Runnable task = () -> {
                 long now = System.currentTimeMillis();
-                if (tcStr == null || tcStr.equals("0")) {
-                    for (int targetId : lobbyConnections.getOrDefault(clientId, Collections.emptySet())) {
-                        if (targetId == clientId) continue;
-                        if (rateLimitPassed(targetId, now)) {
-                            ClientHandler target = clients.get(targetId);
-                            if (target != null) target.sendString(msg);
-                        }
+                if (tc == null || "0".equals(tc)) {
+                    for (int t : lobbyConnections.getOrDefault(clientId, Set.of())) {
+                        if (t == clientId) continue;
+                        if (rateLimit(t, now)) clients.get(t).send(packet);
                     }
                 } else {
-                    int targetId = Integer.parseInt(tcStr);
-                    if (targetId != clientId && rateLimitPassed(targetId, now)) {
-                        ClientHandler target = clients.get(targetId);
-                        if (target != null) target.sendString(msg);
+                    int t = Integer.parseInt(tc);
+                    if (t != clientId && rateLimit(t, now)) {
+                        ClientHandler trg = clients.get(t);
+                        if (trg != null) trg.send(packet);
                     }
                 }
             };
-
-            Executors.newSingleThreadScheduledExecutor().schedule(broadcast, 10, TimeUnit.MILLISECONDS);
+            delayedSender.schedule(task, 10, TimeUnit.MILLISECONDS);
         }
 
-        private void handleQuery(String search) {
-            List<String> results = new ArrayList<>();
-            for (Map.Entry<Integer, Map<String, String>> entry : clientParams.entrySet()) {
-                Map<String, String> gp = entry.getValue();
-                String name = gp.getOrDefault("nam", "").toLowerCase();
-                if (name.contains(search.toLowerCase())) {
-                    Map<String, String> copy = new HashMap<>(gp);
-                    copy.put("id", entry.getKey().toString());
-                    copy.put("sti", String.valueOf(name.indexOf(search.toLowerCase())));
-                    copy.put("nam", Base64.getEncoder().encodeToString(name.getBytes(StandardCharsets.UTF_8)));
-                    results.add(flatten(copy));
-                    if (results.size() >= 100) break;
-                }
-            }
-            sendString("gamelist:" + String.join("|", results));
-        }
-
-        private void handleConnect(Map<String, String> params) {
-            int targetId = Integer.parseInt(params.getOrDefault("tc", "0"));
-            if (targetId == 0) {
-                sendString("ack:error");
-                return;
-            }
-            ClientHandler target = clients.get(targetId);
-            if (target != null) {
-                lobbyConnections.get(clientId).add(targetId);
-                lobbyConnections.get(targetId).add(clientId);
-                target.sendString("fc:" + clientId + ",fp:" + params.get("fp") + ",tp:" + params.get("tp") + "|!connect!");
-                sendString("ack:ok");
-            } else {
-                sendString("ack:error");
-            }
-        }
-
-        private void handleDisconnect(Map<String, String> params) {
-            int peerId = Integer.parseInt(params.getOrDefault("fc", "0"));
-            lobbyConnections.getOrDefault(clientId, new HashSet<>()).remove(peerId);
-            lobbyConnections.getOrDefault(peerId, new HashSet<>()).remove(clientId);
-            ClientHandler peer = clients.get(peerId);
-            if (peer != null) {
-                peer.sendString("disconnected:" + clientId);
-            }
-            sendString("ack:ok");
-        }
-
-        private boolean rateLimitPassed(int targetId, long now) {
-            long last = lastSentToClient.getOrDefault(targetId, 0L);
-            if (now - last >= RATE_LIMIT_MS) {
-                lastSentToClient.put(targetId, now);
-                return true;
-            }
+        //──────────────────────────────────────────────────── HELPERS
+        private boolean rateLimit(int target, long now) {
+            long last = lastSent.getOrDefault(target, 0L);
+            if (now - last >= RATE_LIMIT_MS) { lastSent.put(target, now); return true; }
             return false;
         }
 
-        private Map<String, String> parseMessage(String msg) {
-            Map<String, String> params = new HashMap<>();
-            String[] sections = msg.split("\\|", 2);
-            String[] entries = sections[0].split(",");
-            for (String entry : entries) {
-                String[] kv = entry.split(":", 2);
-                if (kv.length == 2) params.put(kv[0], kv[1]);
+        private Map<String,String> parse(String msg) {
+            Map<String,String> m = new HashMap<>();
+            String[] sec = msg.split("\\|",2);
+            for (String e : sec[0].split(",")) {
+                String[] kv = e.split(":",2);
+                if (kv.length==2) m.put(kv[0], kv[1]);
             }
-            if (sections.length == 2) params.put("data", sections[1]);
-            return params;
+            if (sec.length==2) m.put("data", sec[1]);
+            return m;
         }
 
-        private Map<String, String> decodeBase64Name(Map<String, String> params) {
-            if (params.containsKey("nam")) {
+        private Map<String,String> decodeName(Map<String,String> m) {
+            if (m.containsKey("nam")) {
                 try {
-                    String decoded = new String(Base64.getDecoder().decode(params.get("nam")), StandardCharsets.UTF_8);
-                    params.put("nam", decoded);
+                    String d = new String(Base64.getDecoder().decode(m.get("nam")), StandardCharsets.UTF_8);
+                    m.put("nam", d);
                 } catch (IllegalArgumentException ignored) {}
             }
-            return params;
+            return m;
         }
 
-        private String flatten(Map<String, String> map) {
-            List<String> parts = new ArrayList<>();
-            for (Map.Entry<String, String> entry : map.entrySet()) {
-                parts.add(entry.getKey() + ":" + entry.getValue());
-            }
-            return String.join(",", parts);
+        private String flat(Map<String,String> m) {
+            return m.entrySet().stream().map(e -> e.getKey()+":"+e.getValue()).
+                    collect(Collectors.joining(","));
         }
 
-        private void sendString(String msg) {
+        private void send(String msg) {
             try {
-                byte[] msgBytes = msg.getBytes(StandardCharsets.UTF_8);
+                byte[] b = msg.getBytes(StandardCharsets.UTF_8);
                 synchronized (writeLock) {
-                    output.writeInt(Integer.reverseBytes(msgBytes.length));
-                    output.write(msgBytes);
-                    output.flush();
+                    out.writeInt(Integer.reverseBytes(b.length));
+                    out.write(b); out.flush();
                 }
-            } catch (IOException e) {
-                shutdown();
-            }
+            } catch (IOException e) { shutdown(); }
         }
 
         private void shutdown() {
             running = false;
             clients.remove(clientId);
             lobbyConnections.remove(clientId);
-            try {
-                socket.close();
-            } catch (IOException ignored) {}
-            System.out.println("Client disconnected (id: " + clientId + ")");
+            try { socket.close(); } catch (IOException ignored){}
+            System.out.println("Client disconnected (id:"+clientId+")");
         }
     }
 }
